name:                signatures
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/leetonidas/signatures#readme
license:             BSD3
license-file:        LICENSE
author:              Clemens Jonischkeit
maintainer:          clemens.jonischkeit@in.tum.de
copyright:           BSD
category:            Reverse engeneering
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Signatures.Nuc
                     , Signatures.Graph
                     , Signatures.Function
                     , Signatures.CFG
                     , Signatures.Queue
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , parsec
                     , extra
  default-language:    Haskell2010

executable signatures-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Utils
                     , Match
                     , Options
  build-depends:       base
                     , signatures
                     , containers
                     , parsec
                     , directory
                     , parallel
  default-language:    Haskell2010

test-suite signatures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , signatures
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leetonidas/signatures
